fix: update background color for table headers to improve visibility

--- a/gameFiles/static/css/custom.css
+++ b/gameFiles/static/css/custom.css
@@ -16,7 +16,7 @@
 }
 
 .table-custom th {
-  background-color: --secondary;
+  background-color: --primary;
   color: --white;
 }
 
